Stop choice radios being clipped by form group
Also add margin utility classes to separate cards

--- a/stylesheets/_component.choice.scss
+++ b/stylesheets/_component.choice.scss
@@ -1,3 +1,8 @@
+// Ensure selected Pulsar radio controls aren't clipped
+.form-choice {
+    overflow: visible;
+}
+
 // Align form-choice to grid
 @include respond-min($screen-tablet) {
     .form-choice > .controls > .control__label {
